# Face-Follow-Drone

./: .gitignore  CMakeLists.txt  README  README.md  package.xml
launch/: cam_circle_py.launch  cam_invert_cpp.launch  cam_sift_cpp.launch  cam_sift_py.launch  displayWebcam.launch  face_det_py.launch  fd.launch  feature_detection_file.launch  image_converter.launch  image_converter_sift.launch  takeoffland.launch
launch/flight_20160323_160639/: userbox_1458749199
scripts/: cam_circle.py  cam_sift.py  face_det.py  fd.py  image_converter.py  image_converter_sift.py  sift_surf_direct.py  sift_surf_test_opencv32_cam.py  sift_surf_test_opencv32_file.py  takeoffland.py  version.py
src/: cam_invert_node.cpp  cam_sift_cpp_node.cpp  feature_detection_node.cpp  feature_detection_node_standalone.cpp
