<?xml version="1.0"?>
<package>
  <name>tp_ros_ensta_u2is</name>
  <version>0.1.0</version>
  <description>The tp_ros_ensta_u2is package</description>

  <maintainer email="emmanuel.battesti@ensta-paristech.fr">Emmanuel Battesti</maintainer>

  <license>ENSTA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
